--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
         <!-- Description -->
         <meta name="description" content="Imajin: A celebration of friendship through stories and experiences shared by Imajin about his favorite friends.">
     
+        <!-- Open Graph Meta Tags for Facebook Sharing -->
+        <meta property="og:title" content="Imajin: A Celebration of Friendship" />
+        <meta property="og:description" content="Discover stories and experiences shared by Imajin about his favorite friends." />
+        <meta property="og:image" content="https://raw.githubusercontent.com/ghettopamoja/Imajin/main/logo.jpg" />
+        <meta property="og:url" content="https://ghettopamoja.github.io/Imajin/" />
+        <meta property="og:type" content="website" />
+
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <link rel="stylesheet" href="style.css">
