--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                 <button><i class="fas fa-vial"></i> Test</button>
                 <button><i class="fas fa-copy"></i> Copy Intro</button>
                 <button><i class="fas fa-copy"></i> Copy Quote</button>
-                <button><i class="fas fa-download"></i> Download Quote</button>
-                <button><i class="fas fa-magic"></i> Generate Quote</button>
+                <button title="download quote audio"><i class="fas fa-download"></i> Audio</button>
+                <button title="Generate quote with image"><i class="fas fa-magic"></i> Generate Quote</button>
             </div>
             
         </div>
