--- a/index.html
+++ b/index.html
@@ -98,6 +98,24 @@
         </div>
     </div>
 
+    <div class="characters-preview-overlay">
+        <div class="character-close"><span>&times;</span></div>
+        <div class="character-preview-content">
+            <div class="left-character"></div>
+            <div class="versus">
+                <h2>As</h2>
+                
+            </div>
+            <div class="right-character"></div>
+        </div>
+        <div class="song-picker">
+            <ul>
+                <li><i class="fas fa-play"></i></li>
+                <li><i class="fas fa-play"></i></li>
+            </ul>
+        </div>
+    </div>
+
     <div class="good-bye-overlay">
         <div class="good-bye-content">
             <div class="good-bye-video">
@@ -223,6 +241,14 @@
 
     <div class="quote-maker-notice"></div>
 
+    <dialog class="story-preview">
+        <div class="close-dialog"><span>&times;</span></div>
+        <ul>
+            <li>Stories</li>
+            <li>Characters</li>
+        </ul>
+    </dialog>
+
     <div class="quote-image-upload">
         <div class="upload-content">
             <div class="upload-arena">
@@ -249,6 +275,8 @@
             </div>
         </div>
     </div>
+
+    
 
     <div class="stories-overlay">
         <div class="stories-close"><span>&times;</span></div>
