--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <ul>
             <li>Stories</li>
             <li>Characters</li>
-            <li>Briefing</li>
+            <li>Post</li>
         </ul>
     </dialog>
 
