--- a/index.html
+++ b/index.html
@@ -1168,7 +1168,7 @@
                 <li><i class="fas fa-music"></i></li>
                 <li><i class="fas fa-heart"></i></li>
                 <li><i class="fas fa-list"></i></li>
-                <li><i class="fas fa-newspaper"></i></li>
+                <li><i class="fas fa-user-friends"></i></li>
             </ul>
         </div>
         <div class="song-menu">
